--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const socialMedia = [
   {
     link: "https://twitter.com/xirfs",
     icon: "i-myna-brand-x",
-    name: "Twitter",
+    name: "X",
   },
 ];
 ---
@@ -26,40 +26,34 @@ const socialMedia = [
 >
   <div class="flex items-center justify-center min-h-70vh p-12">
     <div class="w-full grid gap-3 max-w-xl slide-enter-content">
-      <h1 class="dark:text-#e5e7eb text-4xl font-bold item">Andka</h1>
+      <h1 class="dark:text-#e5e7eb text-4xl font-bold item">Andika</h1>
       <div>
-        <p>Hi, I am Andika Nur Pratama</p>
-        <p>Currently a fullstack flutter developer</p>
+        <p>A fullstack developer</p>
       </div>
       <p>
-        Technology is my passion and dreaming about a better world with it and
-        making it happen is a dream come true. I am generally into multiplatfrom
-        development using flutter and vue.js. The code was fun and I always
-        learning new things. If you are interested, you can visit my <a
-          href="/projects"
-          class="font-bold underline">projects here</a
-        >.
+        I work with multiplatform development using Flutter and Vue.js. I enjoy
+        coding and continue to learn new things. You can view my
+        <a href="/projects" class="font-bold underline">projects here</a>.
       </p>
       <p>
-        Recently i created <a
-          href="https://pub.dev/packages/latex_math_evaluator"
+        I recently created <a
+          href="https://pub.dev/packages/texpr"
           target="_blank"
           class="font-bold underline"
-          rel="nofollow noopener noreferrer">latex_math_evaluator</a
-        > as new serious challenge. I will wait for your feedback about it.
+          rel="nofollow noopener noreferrer">TeXpr</a
+        > as a new challenge. Feedback is welcome.
       </p>
       <p>
-        <b>Off-duty?</b> You'll find me immersed in video games or catching up on
-        manga and anime. I'm always looking for a good story, so feel free to share
-        your favorites!
+        <b>Off-duty?</b> I play video games and read manga and anime. I'm open to
+        recommendations if you have any.
       </p>
       <p>
-        I call <b>Madiun, East Java</b> home. If you're nearby, don't be a stranger
-        let's grab a cup of coffee and maybe build something awesome together.
+        I'm based in <b>Madiun, East Java</b>. If you're in the area, feel free
+        to connect over coffee.
       </p>
       <div class="w-20 h-1px bg-gray opacity-50 mx-auto mt-2"></div>
       <div class="text-sm">
-        <p>Find me on</p>
+        <p>Links:</p>
         <div class="flex items-start justify-start gap-4 mt-2">
           {
             socialMedia.map((url) => (
