--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,12 +6,11 @@ import type { Project } from "../types/Project";
 const projectKeys = Object.keys(projects) as Array<keyof typeof projects>;
 ---
 
-<Layout title="Andka projects, take a look at my projects" description="Here are some of the projects that i have done or work on.">
+<Layout title="Projects" description="A list of projects.">
 	<div class="flex min-h-screen p-12 max-w-6xl mx-auto relative">
 		<main class="w-full flex flex-col gap-6">
 			<div class="w-full flex flex-col gap-6 slide-enter-content">
 				<h1 class="text-center font-lexend text-3xl font-bold dark:text-#e5e7eb">Projects</h1>
-				<p class="text-center">Thing that i have done or work on</p>
 			</div>
 			<div class="flex flex-col gap-16" style={`--enter-stage: 0 !important;`}>
 				{
