--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,28 +118,6 @@
     }
 }
 
-::view-transition-old(root),
-::view-transition-new(root) {
-    animation: none;
-    mix-blend-mode: normal;
-}
-
-::view-transition-old(root) {
-    z-index: 1;
-}
-
-::view-transition-new(root) {
-    z-index: 9999;
-}
-
-.dark::view-transition-old(root) {
-    z-index: 9999;
-}
-
-.dark::view-transition-new(root) {
-    z-index: 1;
-}
-
 @keyframes slide-enter {
     0% {
         transform: translateY(10px);
@@ -212,4 +190,30 @@ hr{
     to {
         background-position-x: -350%;
     }
+}
+
+::view-transition-group(root) {
+  animation-timing-function: var(--expo-out);
+}
+
+::view-transition-new(root) {
+  mask: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><defs><filter id="blur"><feGaussianBlur stdDeviation="2"/></filter></defs><circle cx="40" cy="0" r="18" fill="white" filter="url(%23blur)"/></svg>') top right / 0 no-repeat;
+  mask-origin: content-box;
+  animation: scale 2s;
+  animation-fill-mode: both;
+  transform-origin: top right;
+}
+
+::view-transition-old(root),
+  .dark::view-transition-old(root) {
+  animation: scale 2s;
+  animation-fill-mode: both;
+  transform-origin: top right;
+  z-index: -1;
+}
+
+@keyframes scale {
+  to {
+    mask-size: 350vmax;
+  }
 }
