--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,6 +16,11 @@ const links = [
 
 const iconLinks = [
 	{
+		href: "/tools",
+		icon: "i-myna-swatches",
+		label: "Tools",
+	},
+	{
 		href: "https://github.com/xirf",
 		icon: "i-myna-brand-github",
 		label: "GitHub",
@@ -23,22 +28,14 @@ const iconLinks = [
 	{
 		href: "https://twitter.com/xirfs",
 		icon: "i-myna-brand-x",
-		label: "Twitter",
-	},
-	{
-		href: "mailto:itsandka@gmail.com",
-		icon: "i-myna-envelope",
-		label: "Email",
-	},
-	{
-		href: "/rss.xml",
-		icon: "i-myna-rss",
-		label: "RSS",
+		label: "X",
 	},
 ];
 ---
 
-<nav class="px-8 py-6 w-full flex items-center justify-between fixed bottom-0 left-0 md:relative bg-l-base dark:bg-d-base z-100">
+<nav
+	class="px-8 py-6 w-full flex items-center justify-between fixed bottom-0 left-0 md:relative bg-l-base dark:bg-d-base z-100"
+>
 	<a href="/" title="Home" aria-label="Home">
 		<div class="flex justify-between gap-2 font-bold">
 			<span class="i-myna-terminal w-6 h-6"></span>
@@ -48,15 +45,27 @@ const iconLinks = [
 	<div class="flex items-center gap-4">
 		{
 			links.map((link) => (
-				<a href={link.href} class=" flex items-center" title={link.label} aria-label={link.label}>
+				<a
+					href={link.href}
+					class=" flex items-center"
+					title={link.label}
+					aria-label={link.label}
+				>
 					<span class={link.icon + " w-5 h-5 sm:hidden"} />
-					<span class=" hidden sm:block" >{link.label}</span>
+					<span class=" hidden sm:block">{link.label}</span>
 				</a>
 			))
 		}
 		{
 			iconLinks.map((link) => (
-				<a href={link.href} class=" flex items-center" rel="noopener" target="_blank" aria-label={link.label} title={link.label}>
+				<a
+					href={link.href}
+					class=" flex items-center"
+					rel="noopener"
+					target="_blank"
+					aria-label={link.label}
+					title={link.label}
+				>
 					<span class={link.icon + " w-5 h-5"} />
 				</a>
 			))
